--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.14.1",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "@vercel/postgres": "^0.4.0",
+    "drizzle-orm": "^0.27.0",
     "next": "13.4.9",
+    "next-sanity": "^5.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sanity": "^3.14.1",
     "typescript": "5.1.6"
   }
 }
